add responsive mobile nav menu

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<html>
+<html lang="en-US">
     <head>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta Content-Type="text/html"; charset=utf-8>
+        <title>- Portfolio | Nagual -</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <link href="script.js" rel="script" defer>
+        <script src="script.js" rel="script" defer></script>
     </head>
 
     <body>
+        <button type="button" class="menu-btn"><div class="hamb"></div></button>
             <nav class="nav-bar">
                 <div class="logo-container">
                     <a href="#home">
@@ -49,8 +51,8 @@
             
         <header>
             <section id="home">
-                <h1 class="anim-text">Hi! you can call me Nagual!</h1><span class="caption">(not birth name)</span>
-                <h2>Welcome to my Portfolio!</h2>
+                <h1 class="anim-text">Hi! i'm<strong> Nagual!</strong></h1><span class="caption">(not birth name)</span>
+                <h2 class="welcome">Welcome to my Portfolio!</h2>
             </section>
         </header>
 
