add contact section and responsive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </nav>
             
         <header>
-            <section id="home">
+            <section id="home" class="main">
                 <h1 class="anim-text">Hi! i'm<strong> Nagual!</strong></h1><span class="caption">(not birth name)</span>
                 <h2 class="welcome">Welcome to my Portfolio!</h2>
             </section>
@@ -100,7 +100,35 @@
 
         <footer>
             <section id="contact" class="main">
-                <h2>Contact</h2>        
+                <h2>Contact</h2>  
+                <div class="form-container"> 
+                <form action="https://formsubmit.co/nagualpaz@gmail.com" method="POST">
+                    
+                    <div class="input-container">
+                        <input class="input" type="text" name="name" required>
+                        <span class="label" >Your Name</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="input-container">
+                        <input class="input" type="email" name="email" required>
+                        <span class="label">Your Email</span>
+                        <div class="line"></div>
+                    </div>
+                    <div class="input-container">
+                        <textarea class="input" name="message" required></textarea>
+                        <span class="label">Your Message</span>
+                        <div class="line"></div>
+                    </div>
+                    <input type="hidden" name="_next" value="https://NaFaPaz.github.io/Portfolio/thanks.html">
+                    <input type="hidden" name="_subject" value="New Portfolio Email!">
+                    <input type="hidden" name="_template" value="box">
+                    <div class="submit">
+                        <button class="submit-button" type="submit" formtarget="_blank">Send</button>
+                    </div>
+                    <form action="https://formsubmit.co/your-random-string" method="POST" />
+                </form> 
+                </div>
+                <div class="copyright">©2021. Made with <span class="heart">❤</span> by Nagual Paz</div>    
             </section>
         </footer>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
