add work section

--- a/index.html
+++ b/index.html
@@ -80,20 +80,51 @@
                     <li>Philosophy</li>
                 </ul>
             </section>
+
             <section id="work">
                 <h2>Work</h2>
+                <div class="work-container">
+                    <div class="work-card">
+                        <img class="work-image" src="https://images.unsplash.com/photo-1596357395104-ba989e72b5ec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80" alt="">
+                        <div>
+                        <span class="work-skill">HTML</span>
+                        <span class="work-skill">CSS</span>
+                        <!-- <span class="work-skill">JS</span> -->
+                        </div>
+                        <p class="work-caption">Landing Page for Fitness & Workout Center</p>
+                    </div> 
+                    <div class="work-card">
+                        <img class="work-image" src="https://images.unsplash.com/photo-1561840884-9dda41ed54e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="">
+                        <div>
+                        <span class="work-skill">HTML</span>
+                        <span class="work-skill">CSS</span>
+                        <span class="work-skill">JS</span>
+                        </div>
+                        <p class="work-caption">Bicycle E-Commerce</p>
+                    </div> 
+                    <div class="work-card">
+                        <img class="work-image" src="https://images.unsplash.com/photo-1579751626657-72bc17010498?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2069&q=80" alt="">
+                        <div>
+                        <span class="work-skill">HTML</span>
+                        <span class="work-skill">CSS</span>
+                        <span class="work-skill">JS</span>
+                        </div>
+                        <p class="work-caption">Home Page for Pizza & Co. Restaurant</p>
+                    </div>
+                </div> 
             </section>
+
             <section id="skills">
                 <h2>Skills</h2>
                 <div class="card-container">
-                    <div class="icon-card"><img class="skill-icon" src="./media/html-1.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/css-3.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/javascript-1.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/git-icon.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon github" src="./media/github-icon-1.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/nodejs-icon.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/mongodb-icon-1.svg" alt=""></div>
-                    <div class="icon-card"><img class="skill-icon" src="./media/stack-overflow.svg" alt=""></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/html-1.svg" alt=""><caption>HTML5</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/css-3.svg" alt=""><caption>CSS3</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/javascript-1.svg" alt=""><caption>JavaScript</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/git-icon.svg" alt=""><caption>Git</caption></div>
+                    <div class="icon-card"><img class="skill-icon github" src="./media/github-icon-1.svg" alt=""><caption>Git-Hub</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/nodejs-icon.svg" alt=""><caption>Node.Js</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/mongodb-icon-1.svg" alt=""><caption>MongoDB</caption></div>
+                    <div class="icon-card"><img class="skill-icon" src="./media/stack-overflow.svg" alt=""><caption>Stack Overflow</caption></div>
                 </div>
             </section>
         </main>
