fix responsive form

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <li>Learning</li>
                     <li>Problem Solving</li>
                     <li>Teamwork</li>
+                    <li>DevOps</li>
                     <li>Enhancement</li>
                     <li>Technology</li>
-                    <li>DevOps</li>
                 </ul>
                 <h3><i>Personal Interests</i></h3>
                 <ul class="interests">
@@ -132,6 +132,7 @@
         <footer>
             <section id="contact" class="main">
                 <h2>Contact</h2>  
+                <p class="contanct-caption">Let me build your idea! Message me:</p>
                 <div class="form-container"> 
                     <form action="https://formsubmit.co/4ffa179e657cdf1b423d56ffe68d6549" method="POST">
                     
