--- a/index.html
+++ b/index.html
@@ -86,19 +86,19 @@
     <main class="main">
       <section id="about">
         <h2>About</h2>
-        <img class="avatar" src="./media/avatar_402666cf1d4f_128.png" alt="" />
+        <img class="avatar" src="./media/avatar.jpeg" alt="Nagual Paz" />
         <p class="about-info">
-          Nahuel Demian Fanego Paz is an Argentinian self-taught web developer
-          with a passion for making the web look cool.
+          Nahuel Demian Fanego Paz is an Argentinian web developer
+          with a passion for making the web feel and look cool for everyone.
         </p>
         <h3><i>Professional Interests</i></h3>
         <ul class="interests">
           <li>Learning</li>
           <li>Problem Solving</li>
           <li>Teamwork</li>
-          <li>DevOps</li>
-          <li>Enhancement</li>
           <li>Technology</li>
+          <li>Efficiency</li>
+          <li>DevOps</li>
         </ul>
         <h3><i>Personal Interests</i></h3>
         <ul class="interests">
@@ -115,7 +115,7 @@
         <h2>Work</h2>
         <div class="work-container">
           <div class="work-card">
-            <a href="https://nafapaz.github.io/Gym/"
+            <a href="https://nafapaz.github.io/Gym/" target="_blank"
               ><img
                 class="work-image"
                 src="https://images.unsplash.com/photo-1596357395104-ba989e72b5ec?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80"
@@ -131,7 +131,7 @@
             </p>
           </div>
           <div class="work-card">
-            <a href="https://nafapaz.github.io/TRP-Bikes/"><img
+            <a href="https://nafapaz.github.io/TRP-Bikes/" target="_blank"><img
               class="work-image"
               src="https://images.unsplash.com/photo-1561840884-9dda41ed54e4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80"
               alt=""
@@ -142,7 +142,7 @@
               <span class="work-skill">CSS</span>
               <span class="work-skill">JS</span>
             </div>
-            <p class="work-caption">Bicycle E-Commerce</p>
+            <p class="work-caption">Bicycle E-Commerce WebSite</p>
           </div></a>
           <div class="work-card soon">
             <img
@@ -151,9 +151,10 @@
               alt=""
             />
             <div>
-              <span class="work-skill">HTML</span>
-              <span class="work-skill">CSS</span>
-              <span class="work-skill">JS</span>
+              <span class="work-skill">React</span>
+              <span class="work-skill">Node.js</span>
+              <span class="work-skill">Express.js</span>
+              <span class="work-skill">MongoDB</span>
             </div>
             <p class="work-caption">WebApp for Pizza Restaurant</p>
           </div>
@@ -211,7 +212,7 @@
               Node.Js
             </caption>
           </div>
-          <div class="icon-card">
+          <!-- <div class="icon-card">
             <img
               alt="Express.js logo"
               class="skill-icon express"
@@ -230,7 +231,7 @@
             <caption>
               Bootstrap
             </caption>
-          </div>
+          </div> -->
           <div class="icon-card">
             <img
               alt="MongoDB logo"
