--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <main class="main">
       <section id="about">
         <h2>About</h2>
-        <img class="avatar" src="./media/avatar.jpeg" alt="Nagual Paz" />
+        <img class="avatar" src="./media/NPCartoon.jpeg" alt="Nagual Paz" />
         <p class="about-info">
           Nahuel Demian Fanego Paz is an Argentinian web developer
           with a passion for making the web feel and look cool for everyone.
@@ -212,7 +212,7 @@
               Node.Js
             </caption>
           </div>
-          <!-- <div class="icon-card">
+          <div class="icon-card">
             <img
               alt="Express.js logo"
               class="skill-icon express"
@@ -231,7 +231,7 @@
             <caption>
               Bootstrap
             </caption>
-          </div> -->
+          </div>
           <div class="icon-card">
             <img
               alt="MongoDB logo"
