fix words for translate

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <li>
           <a class="toggle" href="#work">
             <ion-icon name="briefcase-outline"></ion-icon>
-            <span class="nav-text">Work</span>
+            <span class="nav-text">Projects</span>
           </a>
         </li>
         <li>
@@ -105,14 +105,14 @@
           <li>Music</li>
           <li>Movies</li>
           <li>Games</li>
-          <li>Cooking</li>
+          <li>Cook</li>
           <li>Nature</li>
           <li>Philosophy</li>
         </ul>
       </section>
 
       <section id="work">
-        <h2>Work</h2>
+        <h2>Projects</h2>
         <div class="work-container">
           <div class="work-card">
             <a href="https://nafapaz.github.io/Gym/" target="_blank"
